--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <canvas id="bgCanvas"></canvas>
+
   <div class="container">
     <h1 class="glow">Add WhatsApp Group</h1>
     <form id="groupForm">
@@ -16,10 +18,11 @@
       <button type="submit">Save Group</button>
     </form>
     <p id="msg"></p>
-
-    <p>View admin? <a href="admin.html" target="_blank">Admin Panel</a></p>
+    <div id="qrcode"></div>
   </div>
 
-  <script type="module" src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <script type="module" src="app.js"></script>
+  <script src="js/tech-bg.js"></script>
 </body>
 </html>
