--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script type="module" src="app.js"></script>
-  <script src="js/tech-bg.js"></script>
+  <script src="tech-bg.js"></script>
 </body>
 </html>
